--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <a href="#testimonials">Testimonials</a>
         <a href="#contact">Contact</a>
         <a href="https://103.191.208.219/studentpanel/">Student Login</a>
-        <a href="htmls/log.html"></a>
+        <a href="htmls/log.html">admin</a>
         <a class="cta" href="https://103.191.208.219/accpanel/login.php">Login</a>
       </nav>
 
@@ -431,4 +431,5 @@
     });
   </script>
 </body>
+
 </html>    
